Add GraphDB verification script and fix backend compatibility
- Add scripts/verify_graphdb.py for testing GraphDB setup
- Fix GraphDB backend repository creation (JSON format for 10.x API)
- Update docker-compose.yml: remove obsolete version, use GraphDB 10.8.1
- Fix test runner to add PREFIX declaration for GraphDB compatibility
- Update README with correct CLI syntax for GraphDB mode

Both RDFLib and GraphDB backends pass all 66 tests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   graphdb:
-    image: ontotext/graphdb:10.7.0-free
+    image: ontotext/graphdb:10.8.1
     container_name: family-ontology-graphdb
     ports:
       - "7200:7200"
